fix: refactoring styling into various css files for better readability and maintability

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -121,53 +121,6 @@
     font-weight: bold;   
 }
 
-.card {
-    background-color: #2f243a;
-    border: 1px solid #513a69;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.card:hover {
-    box-shadow: 0 0 15px #513a69, 0 0 30px #513a69, 0 0 45px #513a69; 
-    transform: scale(1.01);
-    transition: 0.3s ease;
-}
-
-.card:not(:hover) {
-    transition: 0.3s ease;
-}
-
-.card img {
-    max-width: 100%;
-    border-radius: 5px;
-    height: auto;
-}
-
-.card-title {
-    font-weight: bold;
-}
-
-.card-description {
-    font-size: 0.9em;
-    margin-top: 10px;
-}
-
-.card-footer {
-    font-size: 0.8em;
-    color: #a3a3a3;
-}
-
-.card-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 20px;
-}
-
 .dropdown:hover .dropdown-menu {
     display: block;
     margin-top: 0; /* remove delay */
@@ -195,22 +148,4 @@
 
 .dropdown-toggle::after {
     display: none; 
-}
-
-.card-footer-btn {
-    background-color: #2f243a;
-    color: white;
-    outline: none !important;
-    border: none;
-    box-shadow: 0 0 8px 4px #513a69;
-    font-weight: bold;   
-}
-
-.card-footer-btn:hover {
-    transform: scale(1.05);
-    transition: 0.3s ease;
-}
-
-.card-footer-btn:not(:hover) {
-    transition: 0.3s ease;
 }
